<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"

    >

    <TextView
        android:id="@+id/masc"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/light_gray"
        android:gravity="bottom|right"
        android:padding="10dp"
        android:text=""
        android:textSize="48sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        
        <Button
            android:id="@+id/btn_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:layout_margin="2dp"
            android:onClick="onDigit"

            />
        <Button
            android:id="@+id/btn_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="/"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btn_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            />
        <Button
            android:id="@+id/btn_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_multiply"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout><LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    >

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        />
    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_2"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/_3"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:id="@+id/btn_minus"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/minus"
        android:layout_margin="2dp"
        android:onClick="onOperator"
        tools:ignore="UsingOnClickInXml" />


</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >


        <Button
            android:id="@+id/btn_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/_0"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_CLR"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ac"
            android:layout_margin="2dp"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml" />
        <Button
            android:id="@+id/btn_dot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="."
            android:layout_margin="2dp"
            android:onClick="onDot"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >



        <Button
            android:id="@+id/btn_even"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/even"
            android:layout_margin="2dp"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>

</LinearLayout>